--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -33,6 +33,7 @@
     
     <!-- Grouping untuk rentang tanggal -->
     <div class="alert alert-warning mb-3">
+      <label for="tanggal" class="form-label">Pilih Tanggal</label>
       <div class="row">
         <div class="col-md-6">
           <label for="tanggalMulai" class="form-label">Tanggal Mulai</label>
