--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -25,23 +25,28 @@
   <div class="container py-4">
     <h2 class="text-center mb-4">Laporan RKH</h2>
 
-    <!-- Grouping untuk pilih bulan -->
-    <div class="alert alert-primary mb-3">
-      <label for="bulan" class="form-label">Pilih Bulan</label>
-      <input type="month" class="form-control" id="bulan" />
-    </div>
-    
-    <!-- Grouping untuk rentang tanggal -->
-    <div class="alert alert-warning mb-3">
-      <label for="tanggal" class="form-label">Pilih Tanggal</label>
-      <div class="row">
-        <div class="col-md-6">
-          <label for="tanggalMulai" class="form-label">Tanggal Mulai</label>
-          <input type="date" class="form-control" id="tanggalMulai" />
-        </div>
-        <div class="col-md-6">
-          <label for="tanggalAkhir" class="form-label">Tanggal Akhir</label>
-          <input type="date" class="form-control" id="tanggalAkhir" />
+    <!-- Card sebagai pembungkus -->
+    <div class="border border-primary rounded p-3 mb-4">
+      <h5 class="text-primary fw-bold mb-3">Pilih Salah Satu</h5>
+  
+      <!-- Grouping untuk pilih bulan -->
+      <div class="alert alert-primary mb-3">
+        <label for="bulan" class="form-label">Pilih Bulan</label>
+        <input type="month" class="form-control" id="bulan" />
+      </div>
+      
+      <!-- Grouping untuk rentang tanggal -->
+      <div class="alert alert-warning">
+        <label class="form-label">Pilih Tanggal</label>
+        <div class="row">
+          <div class="col-md-6">
+            <label for="tanggalMulai" class="form-label">Tanggal Mulai</label>
+            <input type="date" class="form-control" id="tanggalMulai" />
+          </div>
+          <div class="col-md-6">
+            <label for="tanggalAkhir" class="form-label">Tanggal Akhir</label>
+            <input type="date" class="form-control" id="tanggalAkhir" />
+          </div>
         </div>
       </div>
     </div>
