--- a/rkh.html
+++ b/rkh.html
@@ -59,7 +59,7 @@
         </div>
         <div class="mb-2">
           <label>Volume</label>
-          <input name="volume[]" class="form-control" required>
+          <input type="number" name="volume[]" class="form-control" required>
         </div>
         <div class="mb-2">
           <label>HK</label>
