--- a/index.html
+++ b/index.html
@@ -62,6 +62,29 @@
     </div>
   </div>
 
+  <!-- Menu 3 -->
+  <div class="col-10 col-sm-6">
+    <div class="card menu-card shadow-sm">
+      <div class="card-body text-center">
+        <h5 class="card-title">Form Input Keluhan dan Perbaikan Blok</h5>
+        <p class="card-text">Catat keluhan dan perbaikan kondisi blok secara langsung.</p>
+        <a href="keluhan.html" class="btn btn-warning w-100">Isi Form Keluhan</a>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <!-- Menu 4 -->
+  <div class="col-10 col-sm-6">
+    <div class="card menu-card shadow-sm">
+      <div class="card-body text-center">
+        <h5 class="card-title">Laporan Keluhan dan Perbaikan</h5>
+        <p class="card-text">Lihat rekap keluhan dan tindak lanjut perbaikan blok.</p>
+        <a href="laporankeluhan.html" class="btn btn-info w-100">Lihat Laporan</a>
+      </div>
+    </div>
+  </div>
+
   <!-- Bootstrap JS -->
   <script src="bootstrap.bundle.min.js"></script>
 </body>
