--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="card-body text-center">
         <h5 class="card-title">Form Input Keluhan dan Perbaikan Blok</h5>
         <p class="card-text">Catat keluhan dan perbaikan kondisi blok secara langsung.</p>
-        <a href="keluhan.html" class="btn btn-warning w-100">Isi Form Keluhan</a>
+        <a href="informasi.html" class="btn btn-warning w-100">Isi Form Keluhan</a>
       </div>
     </div>
   </div>
@@ -80,7 +80,7 @@
       <div class="card-body text-center">
         <h5 class="card-title">Laporan Keluhan dan Perbaikan</h5>
         <p class="card-text">Lihat rekap keluhan dan tindak lanjut perbaikan blok.</p>
-        <a href="laporankeluhan.html" class="btn btn-info w-100">Lihat Laporan</a>
+        <a href="informasi.html" class="btn btn-info w-100">Lihat Laporan</a>
       </div>
     </div>
   </div>
