--- a/keluhan.html
+++ b/keluhan.html
@@ -99,7 +99,7 @@
     <div class="toast-message">Data berhasil disimpan</div>
   </div>
 
-  <script src="script.js" defer></script>
+  <script src="scriptkeluhan.js" defer></script>
   <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
